--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,19 +8,26 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "lint": "eslint --ext .js,.ts src",
-    "test": "echo \"No tests yet\""
+    "test": "echo \"No tests yet\"",
+    "db:generate": "node ../../node_modules/drizzle-kit/bin.cjs generate",
+    "db:migrate": "node ../../node_modules/drizzle-kit/bin.cjs migrate"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "express": "^5.1.0",
-    "postgres": "^3.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "postgres": "^3.4.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
